# video-downloader

./: Dockerfile  README.md  docker-compose.yml  umbrel-app-store.yml
sistema-edah/src/: .coveragerc  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
sistema-edah/src/.github/workflows/: qa-quality-gates.yml
sistema-edah/src/church/: admin.py  api_serializers.py  api_urls.py  apps.py  backends.py  permissions.py  rate_limit.py  serializers.py  tests.py  tests_theme_api.py  urls.py
sistema-edah/src/church/forms/: __init__.py  auth.py  cadastros.py  comunicacao.py  cursos.py  discipulado.py  eventos.py  financeiro.py  ministerios_grupos.py  user_settings.py
sistema-edah/src/church/migrations/: 0001_initial.py  0002_add_theme_preference.py  0003_dispositivofcm.py  0004_emailfield_pessoa_igreja.py  0005_add_codigo_acesso_membro.py  0006_indexes_performance.py  (+1 more)
sistema-edah/src/config/: settings.py  settings_test.py  urls.py  urls_public.py
sistema-edah/src/docs/: documentacao_completa_projeto.md
sistema-edah/src/scripts/: backup_sqlite.sh  gen_form_extends.py  gen_simple_templates.py  generate_templates.py  restore_sqlite.sh  smoke_healthcheck.sh
sistema-edah/src/tests/: conftest.py  test_auth_rate_limit_pytest.py  test_chat_api_pytest.py  test_configuracoes_pytest.py  test_mobile_api_admin_pytest.py  test_mobile_api_authz_and_contract_pytest.py  test_mobile_api_pytest.py  test_password_policy_pytest.py  test_permissions_pytest.py  test_rate_limit_pytest.py  test_security_roles_and_bootstrap_pytest.py  test_views_web_pytest.py
(+181 files in other folders)
